--- a/src/main/resources/AjouterExercice.fxml
+++ b/src/main/resources/AjouterExercice.fxml
@@ -1,40 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="833.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterEx">
-
-
-        <children>
-            <VBox layoutX="42.0" layoutY="2.0" prefHeight="600.0" prefWidth="219.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="861.0" AnchorPane.topAnchor="0.0">
-                <children>
-                    <ImageView fitHeight="192.0" fitWidth="189.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@img/iron_core.png" />
-                        </image>
-                    </ImageView>
-                </children>
-            </VBox>
-            <Label layoutX="241.0" layoutY="14.0" prefHeight="24.0" prefWidth="147.0" text="Nom de l'exercice :" />
-            <TextField fx:id="nameTextField" layoutX="240.0" layoutY="44.0" prefHeight="35.0" prefWidth="261.0" promptText="nom" styleClass="text" GridPane.columnIndex="1">
-         <stylesheets>
-            <URL value="@style.css" />
-            <URL value="@style.css" />
-         </stylesheets></TextField>
-            <Label layoutX="236.0" layoutY="94.0" text="Description de l'exercice :" GridPane.rowIndex="1" />
-            <ImageView fx:id="imageView" fitWidth="200" layoutX="550.0" layoutY="47.0" preserveRatio="true" />
-            <Button layoutX="236.0" layoutY="223.0" mnemonicParsing="false" onAction="#handleUploadImage" styleClass="buttonn" stylesheets="@style.css" text="Joindre une image" GridPane.rowIndex="3" />
-            <Button layoutX="238.0" layoutY="276.0" mnemonicParsing="false" onAction="#handleAddExercise" styleClass="buttonn" stylesheets="@style.css" text="Ajouter " GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextArea fx:id="descriptionTextArea" layoutX="238.0" layoutY="123.0" prefHeight="60.0" prefWidth="261.0" promptText="décrire lexercice" styleClass="text" />
-            <Button layoutX="608.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigate" prefHeight="24.0" prefWidth="165.0" styleClass="buttonn" stylesheets="style.css" text="Retourner vers la liste" />
-        </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.AjouterEx">
+    <children>
+        <GridPane layoutX="264.0" layoutY="41.0" prefHeight="271.0" prefWidth="581.0" AnchorPane.leftAnchor="264.0" AnchorPane.rightAnchor="31.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="186.0" minHeight="10.0" prefHeight="163.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="151.00001525878906" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <TextField fx:id="nameTextField" promptText="Entrez le nom de l'exercice" />
+                <TextArea fx:id="descriptionTextArea" prefHeight="149.0" prefWidth="581.0" promptText="Entrez une description" GridPane.rowIndex="1" />
+                <ComboBox fx:id="MuscleComboBox" prefWidth="150.0" promptText="Muscle Target" GridPane.rowIndex="2" />
+            </children>
+        </GridPane>
+        <GridPane layoutX="262.0" layoutY="310.0" prefHeight="250.0" prefWidth="592.0" AnchorPane.leftAnchor="262.0" AnchorPane.rightAnchor="22.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="73.33334350585938" minHeight="10.0" prefHeight="26.666656494140625" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="183.33334350585938" minHeight="10.0" prefHeight="183.33334350585938" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="120.33334350585938" minHeight="1.66668701171875" prefHeight="25.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Button onAction="#handleUploadImage" prefHeight="37.0" prefWidth="149.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Choisir Image" />
+                <ImageView fx:id="imageView" fitHeight="176.0" fitWidth="197.0" preserveRatio="true" GridPane.rowIndex="1" />
+                <Button fx:id="ajouterPlanButton" onAction="#handleAddExercise" prefHeight="37.0" prefWidth="154.0" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Ajouter Plan" GridPane.rowIndex="2">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Button>
+            </children>
+        </GridPane>
+        <VBox layoutY="-3.0" prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="-4.0" AnchorPane.topAnchor="-3.0">
+            <children>
+                <Pane prefHeight="200.0" prefWidth="200.0">
+                    <children>
+                        <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@assets/icons/iron_core.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </Pane>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AjouterExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Ajouter Exercice" textFill="WHITE">
+                    <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@assets/icons/add.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Visualiser Exercice" textFill="WHITE">
+                    <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@assets/icons/search.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Button>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#AfficherExercice" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@assets/css/fullpackstyling.css" text="Exercices" textFill="WHITE">
+                    <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@assets/icons/recipe.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Button>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
