--- a/src/main/resources/bmr.fxml
+++ b/src/main/resources/bmr.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.BMI">
+<AnchorPane prefHeight="635.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.BMR">
    <VBox layoutY="1.0" prefHeight="642.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
          <Pane prefHeight="200.0" prefWidth="200.0">
@@ -89,15 +91,6 @@
          </Button>
       </children>
    </VBox>
-   <Pane layoutX="249.0" layoutY="97.0" prefHeight="118.0" prefWidth="633.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="-17.0">
-      <children>
-         <Label layoutX="30.0" layoutY="34.0" text="BMI" textFill="WHITE">
-            <font>
-               <Font size="35.0" />
-            </font>
-         </Label>
-      </children>
-   </Pane>
    <GridPane layoutX="267.0" layoutY="256.0" prefHeight="362.0" prefWidth="598.0" AnchorPane.leftAnchor="267.20000000000005" AnchorPane.rightAnchor="10.600000000000023">
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -122,16 +115,44 @@
                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
           </TableView>
-         <Label text="BMI: 25">
+         <Label fx:id="bmrLabel" text="BMR:">
             <font>
                <Font name="System Bold" size="23.0" />
             </font>
          </Label>
-         <Label text="Total calories: 2000" GridPane.rowIndex="1">
+         <Label fx:id="caloriesLabel" text="TDEE:" GridPane.rowIndex="1">
             <font>
-               <Font size="16.0" />
+               <Font size="23.0" />
             </font>
          </Label>
       </children>
    </GridPane>
+   <GridPane layoutX="331.0" layoutY="14.0" prefHeight="183.0" prefWidth="469.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+         <TextField fx:id="phoneField" maxWidth="-Infinity" prefHeight="42.0" prefWidth="220.0" promptText="Phone number" />
+         <TextField fx:id="ageField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="42.0" prefWidth="220.0" promptText="Age" GridPane.columnIndex="1" />
+         <TextField fx:id="heightField" maxWidth="-Infinity" prefHeight="42.0" prefWidth="220.0" promptText="Height" GridPane.rowIndex="1" />
+         <TextField fx:id="weightField" maxWidth="-Infinity" prefHeight="42.0" prefWidth="220.0" promptText="Weight" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <ComboBox fx:id="sexComboBox" prefHeight="38.0" prefWidth="150.0" promptText="sex" GridPane.rowIndex="2">
+            <GridPane.margin>
+               <Insets left="35.0" />
+            </GridPane.margin>
+         </ComboBox>
+         <ComboBox fx:id="activityLevelComboBox" prefHeight="38.0" prefWidth="150.0" promptText="Activity Level" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane.margin>
+               <Insets left="35.0" />
+            </GridPane.margin>
+         </ComboBox>
+      </children>
+   </GridPane>
+   <Button layoutX="524.0" layoutY="217.0" mnemonicParsing="false" onAction="#calculateAndDisplayBMR" styleClass="primary-button" stylesheets="@assets/css/fullpackstyling.css" text="Suggest" />
 </AnchorPane>
