--- a/src/main/resources/listeParticipation.fxml
+++ b/src/main/resources/listeParticipation.fxml
@@ -1,37 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.listeParticipation">
    <children>
-      <VBox alignment="TOP_CENTER" layoutY="-2.0" prefHeight="642.0" prefWidth="268.0" style="-fx-background-color: #4d3479;">
+      <VBox prefHeight="633.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="161.0" fitWidth="171.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../java/tn/esprit/images/iron_core.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="lienC" onMouseClicked="#handleCompetitionLabelClick" text="Competition" textFill="WHITE">
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/iron_core.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleCalendrierButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Calendrier des compétitions" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/add.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
                <font>
-                  <Font size="18.0" />
+                  <Font size="13.0" />
                </font>
-            </Label>
-         </children></VBox>
-      <HBox alignment="CENTER" layoutX="267.0" prefHeight="102.0" prefWidth="534.0" style="-fx-background-color: #684fe7;">
+            </Button>
+
+
+
+         </children>
+      </VBox>
+      <HBox alignment="CENTER" layoutX="250.0" prefHeight="92.0" prefWidth="551.0" style="-fx-background-color: #684fe7;">
          <children>
-            <Label text="Liste Participations" textFill="WHITE">
+            <Label text="Liste demandes participations" textFill="WHITE">
                <font>
                   <Font name="Cambria Bold" size="22.0" />
                </font></Label>
          </children>
       </HBox>
-      <ListView fx:id="participationListView" layoutX="267.0" layoutY="116.0" prefHeight="519.0" prefWidth="534.0" />
+      <ListView fx:id="participationListView" layoutX="250.0" layoutY="129.0" prefHeight="506.0" prefWidth="551.0" />
    </children>
 </AnchorPane>
