--- a/src/main/resources/modifierParticipation.fxml
+++ b/src/main/resources/modifierParticipation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -8,22 +9,49 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierParticipation">
+<AnchorPane prefHeight="633.0" prefWidth="799.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.modifierParticipation">
    <children>
       <ComboBox fx:id="listUtilisateur" layoutX="334.0" layoutY="216.0" prefWidth="150.0" />
       <ComboBox fx:id="listCompetition" layoutX="334.0" layoutY="277.0" prefWidth="150.0" />
-      <TextArea fx:id="Description" layoutX="559.0" layoutY="174.0" prefHeight="184.0" prefWidth="183.0" />
-      <Button fx:id="modifierP" layoutX="439.0" layoutY="397.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" text="modifier" />
-      <VBox alignment="TOP_CENTER" prefHeight="634.0" prefWidth="260.0" style="-fx-background-color: #4d3479;">
+      <TextArea fx:id="Description" layoutX="558.0" layoutY="201.0" prefHeight="117.0" prefWidth="183.0" />
+
+
+
+
+
+
+
+
+      <VBox prefHeight="639.0" prefWidth="259.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="-6.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="181.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../java/tn/esprit/images/iron_core.png" />
-               </image>
-            </ImageView>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/iron_core.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Button fx:id="annuler" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleAnnulerButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="return" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logo/add.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
       <HBox alignment="CENTER" layoutX="259.0" prefHeight="100.0" prefWidth="542.0" style="-fx-background-color: #684fe7;">
@@ -35,5 +63,21 @@
             </Label>
          </children>
       </HBox>
+
+            <Button fx:id="modifierP" alignment="BASELINE_LEFT" graphicTextGap="15.0" layoutX="436.0" layoutY="419.0" mnemonicParsing="false" onAction="#handleModifierButtonClick" prefHeight="50.0" prefWidth="122.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="edit" textFill="WHITE">
+         <graphic>
+            <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@logo/edit.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <padding>
+            <Insets left="50.0" />
+         </padding>
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
