--- a/src/main/resources/afficherCompetitionUser.fxml
+++ b/src/main/resources/afficherCompetitionUser.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -14,10 +18,39 @@
         <Label fx:id="dateDebutLabel" layoutX="325.0" layoutY="191.0" text="Label" />
         <Label fx:id="dateFinLabel" layoutX="325.0" layoutY="234.0" text="Label" />
         <Label fx:id="tarifLabel" layoutX="325.0" layoutY="273.0" text="Label" />
-        <Button fx:id="demanderParticipation" layoutX="579.0" layoutY="230.0" mnemonicParsing="false" onAction="#handleDemanderParticipationButtonClick" text="Demander Participation" />
-        <Button fx:id="retour" layoutX="359.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" text="retour" />
-        <VBox prefHeight="634.0" prefWidth="256.0" style="-fx-background-color: #4d3479;" />
-        <HBox alignment="CENTER" layoutX="255.0" prefHeight="96.0" prefWidth="546.0" style="-fx-background-color: #684fe7;">
+        <Button fx:id="demanderParticipation" layoutX="455.0" layoutY="407.0" mnemonicParsing="false" onAction="#handleDemanderParticipationButtonClick" text="Demander Participation" />
+        <VBox prefHeight="633.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Pane prefHeight="200.0" prefWidth="200.0">
+                    <children>
+                        <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="23.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@logo/iron_core.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </Pane>
+                <Button fx:id="retour" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Calendrier des compétitions" textFill="WHITE">
+                    <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@logo/add.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Button>
+
+
+
+            </children>
+        </VBox>
+        <HBox alignment="CENTER" layoutX="250.0" prefHeight="96.0" prefWidth="551.0" style="-fx-background-color: #7156DD;">
             <children>
                 <Label text="Demande participation" textFill="WHITE">
                     <font>
