--- a/src/main/resources/afficherDemande.fxml
+++ b/src/main/resources/afficherDemande.fxml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherDemande">
+<?import javafx.scene.control.Label?>
+<AnchorPane prefHeight="633.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.afficherDemande">
+    <VBox prefHeight="633.0" prefWidth="250.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <children>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+                <children>
+                    <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@logo/iron_core.png" />
+                        </image>
+                    </ImageView>
+                </children>
+            </Pane>
+            <Button fx:id="retour" alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleRetourButtonClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Liste Demandes" textFill="WHITE">
+                <graphic>
+                    <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@logo/add.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
+                <padding>
+                    <Insets left="50.0" />
+                </padding>
+                <font>
+                    <Font size="13.0" />
+                </font>
+            </Button>
+
+
+
+        </children>
+    </VBox>
+   <HBox layoutX="350.0" layoutY="14.0" prefHeight="100.0" prefWidth="200.0" />
+
     <children>
         <Label fx:id="codeP" layoutX="367.0" layoutY="218.0" text="Label" />
         <Label fx:id="codeU" layoutX="365.0" layoutY="274.0" text="Label" />
         <Label fx:id="codeC" layoutX="365.0" layoutY="312.0" text="Label" />
-        <VBox alignment="TOP_CENTER" layoutX="-4.0" prefHeight="642.0" prefWidth="265.0" style="-fx-background-color: #4d3479;">
-            <children>
-                <ImageView fitHeight="162.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../java/tn/esprit/images/iron_core.png" />
-                    </image>
-                </ImageView>
-            </children></VBox>
-        <HBox alignment="CENTER" layoutX="261.0" prefHeight="101.0" prefWidth="539.0" style="-fx-background-color: #684fe7;">
-            <children>
-                <Label prefHeight="27.0" prefWidth="268.0" text="Afficher demande" textFill="WHITE">
-                    <font>
-                        <Font name="Cambria Bold" size="22.0" />
-                    </font>
-                </Label>
-            </children></HBox>
+
+
         <Button fx:id="accepterBtn" layoutX="432.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleAccepterButtonClick" text="accepter" />
         <Button fx:id="refuserBtn" layoutX="521.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleRefuserButtonClick" text="refuser" />
         <Label fx:id="desc" layoutX="353.0" layoutY="369.0" text="Label" />
