--- a/src/main/resources/listeDemande.fxml
+++ b/src/main/resources/listeDemande.fxml
@@ -1,33 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.controllers.listeDemande">
     <children>
-        <VBox alignment="TOP_CENTER" layoutY="-2.0" prefHeight="642.0" prefWidth="268.0" style="-fx-background-color: #4d3479;">
+        <VBox prefHeight="635.0" prefWidth="270.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <ImageView fitHeight="161.0" fitWidth="171.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../java/tn/esprit/images/iron_core.png" />
-                    </image>
-                </ImageView>
-                <Label fx:id="lienC" onMouseClicked="#handleCompetitionLabelClick" text="Competition" textFill="WHITE">
+                <Pane prefHeight="200.0" prefWidth="200.0">
+                    <children>
+                        <ImageView fitHeight="183.0" fitWidth="208.0" layoutX="34.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@logo/iron_core.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </Pane>
+                <Button alignment="BASELINE_LEFT" graphicTextGap="15.0" mnemonicParsing="false" onAction="#handleCompetitionLabelClick" prefHeight="50.0" prefWidth="291.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" text="Liste des compétitions" textFill="WHITE">
+                    <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@logo/search.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <padding>
+                        <Insets left="50.0" />
+                    </padding>
                     <font>
-                        <Font size="18.0" />
+                        <Font size="13.0" />
                     </font>
-                </Label>
-                <Label fx:id="lienAjoutP" onMouseClicked="#handleAjouterParticipationClick" text="add participation" textFill="WHITE" />
-            </children></VBox>
+                </Button>
+
+
+
+            </children>
+        </VBox>
         <HBox alignment="CENTER" layoutX="267.0" prefHeight="116.0" prefWidth="534.0" style="-fx-background-color: #684fe7;">
             <children>
-                <Label text="Traitement des demandes" textFill="WHITE">
+                <Label text="liste des demandes" textFill="WHITE">
                     <font>
                         <Font name="Cambria Bold" size="22.0" />
                     </font></Label>
